# Drawwave-Vocoder

./: .gitignore  CMakeLists.txt  DRWWVVC.icns  LICENSE  README.md
.github/workflows/: build.yml  release.yml
Presets/: Bass_Vocoder.dvoc  Buzz_Lead.dvoc  Choir.dvoc  Classic_Robot.dvoc  Crystal.dvoc  Daft_Style.dvoc  Glitch.dvoc  Init.dvoc  Megaphone.dvoc  Monster.dvoc  Sci_Fi_Voice.dvoc  Spectral_Wash.dvoc  Talking_Pad.dvoc  Underwater.dvoc  Vintage_70s.dvoc  Whisper_Chorus.dvoc
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Standalone/: Main.cpp
Source/dsp/: DrawableLfo.cpp  DrawableLfo.h  EnvelopeFollower.cpp  EnvelopeFollower.h  FilterBank.cpp  FilterBank.h  MipmapTable.cpp  MipmapTable.h  OutputStage.cpp  OutputStage.h  UnvoicedDetector.cpp  UnvoicedDetector.h  VocoderCore.cpp  VocoderCore.h  VoiceManager.cpp  VoiceManager.h  WavetableOscillator.cpp  WavetableOscillator.h
Source/gui/: BandGainEditor.cpp  BandGainEditor.h  DrawableCurveComponent.cpp  DrawableCurveComponent.h  KnobPanel.cpp  KnobPanel.h  LfoShaperEditor.cpp  LfoShaperEditor.h  PianoKeyboard.cpp  PianoKeyboard.h  PresetBrowser.cpp  PresetBrowser.h  WaveformEditor.cpp  WaveformEditor.h
Source/state/: Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h
Tests/: CMakeLists.txt
Tests/dsp/: SmokeTest.cpp
docs/: SPEC.md  USAGE.md  WORKFLOW.md
